--- a/Milestone3/M3-company.html
+++ b/Milestone3/M3-company.html
@@ -10,6 +10,7 @@
 </head>
 <body class=" d-flex flex-column border ">
     <div class="main-box m-5 shadow-lg ">
+        <a class="btn btn-primary sticky-top ms-2" href="./M3-index.html" role="button">Go Back</a>
 
     <div class="upper-box pt-4 d-flex justify-content-center ">
         <div class="upper-content ">
